Search filter functionality

--- a/Contactor/package.json
+++ b/Contactor/package.json
@@ -26,7 +26,8 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "eslint-plugin-react": "^7.31.11"
   },
   "private": true
 }
