--- a/Contactor/package.json
+++ b/Contactor/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/stack": "^6.3.5",
     "expo": "~47.0.8",
+    "expo-camera": "^13.1.0",
+    "expo-contacts": "~11.0.1",
     "expo-file-system": "^15.1.1",
     "expo-image-picker": "^14.0.2",
     "expo-status-bar": "~1.4.2",
