--- a/Contactor/package.json
+++ b/Contactor/package.json
@@ -14,7 +14,7 @@
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/stack": "^6.3.5",
     "expo": "~47.0.8",
-    "expo-file-system": "^15.1.1",
+    "expo-file-system": "~15.1.1",
     "expo-image-picker": "^14.0.2",
     "expo-status-bar": "~1.4.2",
     "formik": "^2.2.9",
