--- a/Contactor/package.json
+++ b/Contactor/package.json
@@ -26,6 +26,7 @@
     "react-native-get-random-values": "^1.8.0",
     "react-native-modal": "^13.0.1",
     "react-native-phone-call": "^1.2.0",
+    "react-native-section-alphabet-list": "^3.0.0",
     "react-navigation": "^4.4.4",
     "uuid": "^9.0.0"
   },
