--- a/Contactor/package.json
+++ b/Contactor/package.json
@@ -13,6 +13,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/stack": "^6.3.5",
+    "antd-mobile-icons": "^0.3.0",
     "expo": "~47.0.8",
     "expo-camera": "^13.1.0",
     "expo-contacts": "~11.0.1",
