--- a/Contactor/package.json
+++ b/Contactor/package.json
@@ -23,6 +23,7 @@
     "latinize": "^0.5.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-contacts": "^7.0.5",
     "react-native-get-random-values": "^1.8.0",
     "react-native-modal": "^13.0.1",
     "react-native-phone-call": "^1.2.0",
